--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongodb-uri": "^0.9.7",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "mongoose-type-url": "^1.0.5"
   }
 }
