Add collection name and timestamps

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.4.4",
+    "mongoose-timestamp": "^0.6.0",
     "mongoose-type-url": "^1.0.5"
   }
 }
