--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.4.4",
     "mongoose-timestamp": "^0.6.0",
-    "mongoose-type-url": "^1.0.5"
+    "mongoose-type-url": "^1.0.5",
+    "objectid-to-timestamp": "^1.3.0"
   }
 }
